# debiased-package

./: pyproject.toml  readthedocs.yaml  reupload.sh
docs/source/: conf.py  debiased.crossvalidation.rst  debiased.crossvalidation.scorers.rst  debiased.crossvalidation.scorers.scorer.rst  debiased.mitigation.inprocessing.chakraborty_in.rst  debiased.mitigation.inprocessing.gao.rst  debiased.mitigation.inprocessing.in_template.rst  debiased.mitigation.inprocessing.inprocessor.rst  debiased.mitigation.inprocessing.liu.rst  debiased.mitigation.inprocessing.zafar.rst  debiased.mitigation.postprocessing.kamiranpost.rst  debiased.mitigation.postprocessing.rst  debiased.mitigation.preprocessing.alabdulmohsin.rst  debiased.mitigation.preprocessing.calders.rst  debiased.mitigation.preprocessing.chakraborty.rst  debiased.mitigation.preprocessing.cock.rst  debiased.mitigation.preprocessing.iosifidis_smoteattribute.rst  debiased.mitigation.preprocessing.lahoti.rst  debiased.mitigation.preprocessing.preprocessor.rst  debiased.mitigation.preprocessing.rst  debiased.mitigation.preprocessing.smote.rst  debiased.mitigation.preprocessing.zemel.rst  debiased.predictors.decision_tree.rst  debiased.predictors.logistic_regression.rst  debiased.predictors.portugal_garf.rst  debiased.predictors.predictor.rst  debiased.predictors.rst  debiased.rst  index.rst
src/debiased/: template.ipynb
src/debiased.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/debiased/predictors/: decision_tree.py  logistic_regression.py  oulad_smotenn.py  (+2 more)
src/debiased_jadouille.egg-info/: PKG-INFO  SOURCES.txt
(+59 files in other folders)
